--- a/index.html
+++ b/index.html
@@ -93,7 +93,71 @@
          <div class="page__featured featured">
             <div class="featured__conteiner _conteiner">
                <div class="feature__body">
-                  
+                  <span class="featured__main-title">Featured works</span>
+                  <div class="featured__works-one">
+                     <div class="featured__left-side"><img class="featued__img-one" src="img/foatured-block/Rectangle 32.svg" alt="work">
+                     <img class="featued__img-two" src="img/foatured-block/Rectangle 30.png" alt="">
+                     </div>
+                     <div class="feature__right-side">
+                        <div class="featured__title">Designing Dashboards</div>
+                        <div class="featured__info">
+                           <div class="featured__year">2020</div>
+                           <div class="featured__type">Dashboard</div>
+                        </div>
+                        <div class="featured__text">
+                           Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
+                        </div>
+                     </div>
+
+                  </div>
+                  <div class="featured__works-three">
+                     <div class="featured__left-side"><img class="featued__img-one" src="img/foatured-block/Rectangle 32.svg" alt="work">
+                     <img class="featued__img-two" src="img/foatured-block/Rectangle 30.png" alt="">
+                     </div>
+                     <div class="feature__right-side">
+                        <div class="featured__title">Designing Dashboards</div>
+                        <div class="featured__info">
+                           <div class="featured__year">2020</div>
+                           <div class="featured__type">Dashboard</div>
+                        </div>
+                        <div class="featured__text">
+                           Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
+                        </div>
+                     </div>
+
+                  </div>
+                  <div class="featured__works-4">
+                     <div class="featured__left-side"><img class="featued__img-one" src="img/foatured-block/Rectangle 32.svg" alt="work">
+                     <img class="featued__img-two" src="img/foatured-block/Rectangle 30.png" alt="">
+                     </div>
+                     <div class="feature__right-side">
+                        <div class="featured__title">Designing Dashboards</div>
+                        <div class="featured__info">
+                           <div class="featured__year">2020</div>
+                           <div class="featured__type">Dashboard</div>
+                        </div>
+                        <div class="featured__text">
+                           Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
+                        </div>
+                     </div>
+
+                  </div>
+                  <div class="featured__works-five">
+                     <div class="featured__left-side"><img class="featued__img-one" src="img/foatured-block/Rectangle 32.svg" alt="work">
+                     <img class="featued__img-two" src="img/foatured-block/Rectangle 30.png" alt="">
+                     </div>
+                     <div class="feature__right-side">
+                        <div class="featured__title">Designing Dashboards</div>
+                        <div class="featured__info">
+                           <div class="featured__year">2020</div>
+                           <div class="featured__type">Dashboard</div>
+                        </div>
+                        <div class="featured__text">
+                           Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
+                        </div>
+                     </div>
+
+                  </div>
                </div>
             </div>
          </div>
