--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                      </div>
                   </div>
                   <div class="intro__right-side">
-                     <img src="/img/intro-block/photo.svg" alt="">
+                     <img src="img/intro-block/photo.svg" alt="">
                   </div>
                </div>
             </div>
