--- a/index.html
+++ b/index.html
@@ -108,6 +108,21 @@
                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
                         </div>
                      </div>
+                  </div>
+                  <div class="featured__works-two">
+                     <div class="featured__left-side"><img class="featued__img-one" src="img/foatured-block/Rectangle 32.svg" alt="work">
+                     <img class="featued__img-two" src="img/foatured-block/Rectangle 30.png" alt="">
+                     </div>
+                     <div class="feature__right-side">
+                        <div class="featured__title">Designing Dashboards</div>
+                        <div class="featured__info">
+                           <div class="featured__year">2020</div>
+                           <div class="featured__type">Dashboard</div>
+                        </div>
+                        <div class="featured__text">
+                           Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
+                           </div>
+                     </div>
 
                   </div>
                   <div class="featured__works-three">
@@ -140,29 +155,21 @@
                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
                         </div>
                      </div>
-
-                  </div>
-                  <div class="featured__works-five">
-                     <div class="featured__left-side"><img class="featued__img-one" src="img/foatured-block/Rectangle 32.svg" alt="work">
-                     <img class="featued__img-two" src="img/foatured-block/Rectangle 30.png" alt="">
-                     </div>
-                     <div class="feature__right-side">
-                        <div class="featured__title">Designing Dashboards</div>
-                        <div class="featured__info">
-                           <div class="featured__year">2020</div>
-                           <div class="featured__type">Dashboard</div>
-                        </div>
-                        <div class="featured__text">
-                           Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
-                        </div>
-                     </div>
-
                   </div>
                </div>
             </div>
          </div>
-         <br><br><br><br><br><br><br><br><br><br>
       </main>
+      <footer class="footer">
+         <div class="footer__conteiner _conteiner">
+            <div class="footer__logos">
+               <div class="footer__logo facebook"><img src="img/footer/face.png" alt="logo"></div>
+               <div class="footer__logo fb"><img src="img/footer/fb.png" alt="logo"></div>
+               <div class="footer__logo inst"><img src="img/footer/inst.png" alt="logo"></div>
+            </div>
+            <div class="footer__copyright">Copyright ©2020 All rights reserved </div>
+         </div>
+      </footer>
    </div>
 </body>
 </html>
