--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
                </div>
             </div>
          </div>
+         <div class="page__payment">
+            
+         </div>
       </main>
       <footer class="footer">
          <div class="footer__conteiner _conteiner">
