--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                <div class="intro__body">
                   <div class="intro__left-side">
                      <div class="intro__title">
-                        <h1 class="intro__title">Hi, I am John,<br>
-                        Creative Technologist</h1>
+                        <h1 class="intro__title">Привет, я Рахмидин,<br>
+                        Python Web Developer</h1>
                      </div>
                      <div class="intro__subtitle">
                         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet <br>
