--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
                         Python Web Developer</h1>
                      </div>
                      <div class="intro__subtitle">
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet <br>
-                        sint. Velit officia consequat duis enim velit mollit. Exercitation veniam <br>
-                        consequat sunt nostrud amet.
+                           Я начал изучать Python в 2021 году, за это время
+                           успел также обучится другими инструментами для 
+                           Web разработки.Снизу вы можете скачать мое резюме 
+                           в котором будет список вешей которому я обучился
                         <div class="intro__button">
-                           <a class="intro__button-link" href="#"><span >Download Resume</span></a>
+                           <a class="intro__button-link" href="#"><span >Cкачать резюме</span></a>
                         </div>
                      </div>
                   </div>
@@ -67,7 +68,7 @@
                            Amet minim mollit non deserunt ullamco est sit <br> 
                            aliqua dolor do amet sint. Velit officia consequat <br> 
                            duis enim velit mollit. Exercitation veniam <br> 
-                           consequat sunt nostrud amet
+                           consequat sunt nostrud 
                         </div>
                      </div>
                      <div class="posts__item">
